# mmap-vecdeque

./: Cargo.toml  README.md
src/: error.rs  lib.rs  mmap_vecdeque.rs
tests/: additional.rs  basic.rs
