[package]
name = "mmap-vecdeque"
version = "0.2.0"
authors = ["Anand Aiyer <aaiyer@gmail.com>"]
edition = "2021"
description = "A file-backed memory-mapped VecDeque with deferred commits, atomic and durable persistence."
readme = "README.md"
license = "MIT"
repository = "https://github.com/aaiyer/mmap-vecdeque"
keywords = ["mmap", "file-backed", "memory-mapped", "VecDeque", "persistence"]

[dependencies]
anyhow = "1.0"
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
postcard = { version = "1.1", features = ["use-std"] }
memmap2 = "0.9"
atomicwrites = "0.4"
thiserror = "2.0"

[dev-dependencies]
tempfile = "3.14"
